Pass module-path and add-modules options with -J prefix to frgaal